--- a/index.css
+++ b/index.css
@@ -41,7 +41,7 @@ h1.bigger{
 
 footer{
     text-align: center;
-    background-image: url("Future Seeing(Dark).jpeg");
+    background-image: url("Future Seeing\(Dark\).jpeg");
     background-size: cover;
     width: 100%;
     height: 50px;
