--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ header{
     margin-top: 0px;
     text-align: center;
     width: 100%;
-    height: 30px;
+    height: 15%;
     color: white;
     background-color: black;
     display: flex;
